vlib/v/checker/tests/if_guard_variables_err.out
vlib/v/checker/tests/if_guard_variables_err.vv:14:2: error: if guard expects 3 variables, but got 1
   12 | 
   13 | fn main() {
   14 |     if r1 := create() {
      |     ~~~~~~~~~~~~~~~~~
   15 |         println(r1)
   16 |     }
vlib/v/checker/tests/if_guard_variables_err.vv:18:2: error: if guard expects 3 variables, but got 4
   16 |     }
   17 | 
   18 |     if r1, r2, r3, r4 := create() {
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   19 |         println(r1)
   20 |         println(r2)
vlib/v/checker/tests/if_guard_variables_err.vv:25:2: error: if guard expects 2 variables, but got 1
   23 |     }
   24 | 
   25 |     if x := maybe() {
      |     ~~~~~~~~~~~~~~~
   26 |         println('${x}')
   27 |     }
vlib/v/checker/tests/if_guard_variables_err.vv:29:2: error: if guard expects a single variable, but got 2
   27 |     }
   28 | 
   29 |     if a, b := simple() {
      |     ~~~~~~~~~~~~~~~~~~~
   30 |         println(a)
   31 |         println(b)
